Add membar to recents options [2/2]
AICPfy
CheckBox -> Switch

Change-Id: I68c7252fd542be4b681eb1c54e25be978b03db09

--- a/res/xml/recents_panel_layout.xml
+++ b/res/xml/recents_panel_layout.xml
@@ -45,5 +45,11 @@
         android:summaryOff="@string/recents_fullscreen_summary_disabled"
         android:defaultValue="false" />
 
+    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+        android:key="systemui_recents_mem_display"
+        android:title="@string/recents_show_membar_title"
+        android:summary="@string/recents_show_membar_summary"
+        android:defaultValue="false" />
+
 </PreferenceScreen>
 
