AicpExtras: Give 'Log That Shit' It's Own Icon
Change-Id: I7b16edf2fa543800a65146204a33987d8958e0d7
Source: https://design.google.com/icons/

--- a/res/menu/activity_main_drawer.xml
+++ b/res/menu/activity_main_drawer.xml
@@ -46,7 +46,7 @@
             <item
                 android:id="@+id/nav_log_it"
                 android:checkable="true"
-                android:icon="@drawable/ic_about"
+                android:icon="@drawable/ic_bugreport"
                 android:title="@string/log_that_shit_title" />
             <item
                 android:id="@+id/nav_about"
