--- a/res/xml/statusbar_layout.xml
+++ b/res/xml/statusbar_layout.xml
@@ -15,27 +15,33 @@
         android:summary="@string/show_headset_icon_summary"
         android:defaultValue="true" />
 
-   <!-- Status bar AICP logo -->
-   <PreferenceCategory
-           android:title="@string/status_bar_logo_category_title">
-       <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
-           android:key="status_bar_aicp_logo"
-           android:title="@string/status_bar_aicp_logo_title"
-           android:summary="@string/status_bar_aicp_logo_summary" />
+    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+        android:key="status_bar_show_show_ticker"
+        android:title="@string/status_bar_ticker_title"
+        android:summary="@string/status_bar_ticker_summary"
+        android:defaultValue="false" />
 
-       <net.margaritov.preference.colorpicker.ColorPickerPreference
-           android:key="status_bar_aicp_logo_color"
-           android:title="@string/status_bar_aicp_logo_color"
-           android:defaultValue="0xffffffff"
-           android:dependency="status_bar_aicp_logo" />
+    <!-- Status bar AICP logo -->
+    <PreferenceCategory
+            android:title="@string/status_bar_logo_category_title">
+        <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+            android:key="status_bar_aicp_logo"
+            android:title="@string/status_bar_aicp_logo_title"
+            android:summary="@string/status_bar_aicp_logo_summary" />
 
-      <ListPreference
-           android:key="status_bar_aicp_logo_style"
-           android:title="@string/status_bar_aicp_logo_position"
-           android:dialogTitle="@string/status_bar_aicp_logo_position"
-           android:entries="@array/status_bar_logo_position_entries"
-           android:entryValues="@array/status_bar_logo_position_values"
-           android:dependency="status_bar_aicp_logo" />
+        <net.margaritov.preference.colorpicker.ColorPickerPreference
+            android:key="status_bar_aicp_logo_color"
+            android:title="@string/status_bar_aicp_logo_color"
+            android:defaultValue="0xffffffff"
+            android:dependency="status_bar_aicp_logo" />
+
+        <ListPreference
+            android:key="status_bar_aicp_logo_style"
+            android:title="@string/status_bar_aicp_logo_position"
+            android:dialogTitle="@string/status_bar_aicp_logo_position"
+            android:entries="@array/status_bar_logo_position_entries"
+            android:entryValues="@array/status_bar_logo_position_values"
+            android:dependency="status_bar_aicp_logo" />
     </PreferenceCategory>
 
    <Preference
