--- a/res/layout/hidden_img_layout.xml
+++ b/res/layout/hidden_img_layout.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:layout_gravity="center">
 
     <ImageView
         android:id="@+id/hidden_img"
-        android:layout_width="wrap_content"
-        android:layout_height="332dp"
-        android:src="@drawable/aicp_hidden"/>
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:src="@drawable/aicp_hidden" />
 
 </LinearLayout>
