--- a/res/layout/about_logo.xml
+++ b/res/layout/about_logo.xml
@@ -14,15 +14,30 @@
      limitations under the License.
 -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center" >
+    android:layout_height="156dp"
+    android:gravity="center">
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="160dp"
-            android:src="@drawable/aicp_about_header"
-            android:scaleType="centerCrop" />
-
-</LinearLayout> 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/aicp_logo_bg"
+        android:layout_gravity="bottom"
+        android:tint="@color/secondary_text_material_dark"
+        android:scaleType="centerCrop"
+        />
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/aicp_logo_letters"
+        android:tint="@color/colorPrimary"
+        android:layout_gravity="center_horizontal"
+        />
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/aicp_shadow"
+        android:layout_gravity="bottom|center_horizontal"
+        />
+</FrameLayout>
