--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#607D8B</color>
-    <color name="colorPrimaryDark">#455A64</color>
-    <color name="startColor">#314048</color>
-    <color name="centerColor">#455A64</color>
-    <color name="endColor">#617e8c</color>
+    <color name="colorPrimary">#2196f3</color>
+    <color name="colorPrimaryDark">#1976d2</color>
+    <color name="startColor">#2196f3</color>
+    <color name="centerColor">#2196f3</color>
+    <color name="endColor">#2196f3</color>
     <color name="line_color">#B6B6B6</color>
-    <color name="colorAccent">#FF607D8B</color>
+    <color name="colorAccent">#2196f3</color>
     <color name="overlayBackground">#00ffffff</color>
 
     <color name="background_material_dark">#FF303030</color>
