--- a/res/values/array.xml
+++ b/res/values/array.xml
@@ -495,8 +495,14 @@
         <item>@string/lock_clock_font_bold</item>
         <item>@string/lock_clock_font_italic</item>
         <item>@string/lock_clock_font_bold_italic</item>
+        <item>@string/lock_clock_font_light_normal</item>
+        <item>@string/lock_clock_font_light_bold</item>
         <item>@string/lock_clock_font_light_italic</item>
+        <item>@string/lock_clock_font_light_bold_italic</item>
+        <item>@string/lock_clock_font_thin_normal</item>
+        <item>@string/lock_clock_font_thin_bold</item>
         <item>@string/lock_clock_font_thin_italic</item>
+        <item>@string/lock_clock_font_thin_bold_italic</item>
         <item>@string/lock_clock_font_condensed_normal</item>
         <item>@string/lock_clock_font_condensed_italic</item>
         <item>@string/lock_clock_font_condensed_bold</item>
@@ -518,6 +524,12 @@
         <item>9</item>
         <item>10</item>
         <item>11</item>
+        <item>12</item>
+        <item>13</item>
+        <item>14</item>
+        <item>15</item>
+        <item>16</item>
+        <item>17</item>
     </string-array>
 
 </resources>
