AE: Add clock in recents while in fullscreen mode (2/2)
Change-Id: I77043ab00cc0fdad4a37d1046f12d7139a86e313

--- a/res/xml/recents_panel_layout.xml
+++ b/res/xml/recents_panel_layout.xml
@@ -46,6 +46,13 @@
         android:defaultValue="false" />
 
     <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+        android:key="recents_full_screen_clock"
+        android:title="@string/recents_full_screen_clock_title"
+        android:summary="@string/recents_full_screen_clock_summary"
+        android:defaultValue="false"
+        android:dependency="recents_full_screen" />
+
+    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
         android:key="systemui_recents_mem_display"
         android:title="@string/recents_show_membar_title"
         android:summary="@string/recents_show_membar_summary"
