AE: Move recents search widget toggle to AE (1/2)
Change-Id: Iaa3df178a77c99f01b584998a601920f1590d13e

--- a/res/xml/recents_panel_layout.xml
+++ b/res/xml/recents_panel_layout.xml
@@ -38,6 +38,12 @@
         android:defaultValue="true"
         android:dependency="show_clear_all_recents" />
 
+    <!-- Search in Recents -->
+    <com.lordclockan.aicpextras.preferences.CMSystemSettingSwitchPreference
+        android:key="recents_show_search_bar"
+        android:title="@string/recents_show_searchbar"
+        android:defaultValue="true" />
+
     <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
         android:key="recents_full_screen"
         android:title="@string/recents_show_fullscreen"
