--- a/res/xml/various_layout.xml
+++ b/res/xml/various_layout.xml
@@ -34,6 +34,13 @@
         android:summary="@string/headset_connect_player_summary"
         android:defaultValue="false" />
 
+    <!-- Screenshot tone -->
+    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+        android:key="screenshot_sound"
+        android:title="@string/screenshot_sound_title"
+        android:summary="@string/screenshot_sound_summary"
+        android:defaultValue="true" />
+
     <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
         android:key="three_finger_gesture"
         android:title="@string/three_finger_gesture"
