--- a/res/xml/multishit_layout.xml
+++ b/res/xml/multishit_layout.xml
@@ -14,6 +14,10 @@
         android:title="@string/app_circle_bar_title" />
 
     <Preference
+        android:key="app_side_bar"
+        android:title="@string/app_sidebar_title" />
+
+    <Preference
         android:key="slim_recents_panel"
         android:title="@string/use_slim_recents_title" />
 
