--- a/res/xml/extensions_layout.xml
+++ b/res/xml/extensions_layout.xml
@@ -4,6 +4,10 @@
     xmlns:aicpextras="http://schemas.android.com/apk/res/com.lordclockan.aicpextras">
 
     <Preference
+        android:key="app_side_bar"
+        android:title="@string/app_sidebar_title" />
+
+    <Preference
         android:key="system_app_remover"
         android:title="@string/system_app_remover" />
 
