BatteryBar: Add ListPreference for devices without navbar
Change-Id: I06acfcc48e66a3b222e9b24488648357a2fa74a0

--- a/res/xml/battery_bar.xml
+++ b/res/xml/battery_bar.xml
@@ -24,6 +24,12 @@
         android:entries="@array/battery_bar_entries"
         android:entryValues="@array/battery_bar_values" />
 
+    <ListPreference
+        android:key="battery_bar_no_navbar_list"
+        android:title="@string/battery_bar_no_navbar"
+        android:entries="@array/battery_bar_no_navbar_entries"
+        android:entryValues="@array/battery_bar_no_navbar_values" />
+
     <net.margaritov.preference.colorpicker.ColorPickerPreference
         android:key="battery_bar_color"
         android:title="@string/battery_bar_color"
