--- a/res/values/array.xml
+++ b/res/values/array.xml
@@ -91,6 +91,16 @@
         <item>3</item>
     </string-array>
 
+    <string-array name="battery_bar_no_navbar_entries">
+        <item>Hide</item>
+        <item>Statusbar</item>
+    </string-array>
+
+    <string-array name="battery_bar_no_navbar_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
     <string-array name="battery_bar_style_entries">
         <item>Regular</item>
         <item>Center-mirrored</item>
