--- a/res/xml/various_layout.xml
+++ b/res/xml/various_layout.xml
@@ -51,4 +51,8 @@
         android:key="system_app_remover"
         android:title="@string/system_app_remover" />
 
+    <Preference
+        android:key="wakelock_blocker"
+        android:title="@string/wakelock_blocker_title" />
+
 </PreferenceScreen>
