--- a/res/xml/notifications_layout.xml
+++ b/res/xml/notifications_layout.xml
@@ -30,6 +30,13 @@
         android:dependency="qs_show_brightness_slider"
         android:defaultValue="true"/>
 
+    <SwitchPreference
+        android:key="block_on_secure_keyguard"
+        android:title="@string/block_on_secure_keyguard_title"
+        android:summary="@string/block_on_secure_keyguard_summary"
+        android:persistent="false"
+        android:defaultValue="true"/>
+
     <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
         android:key="status_bar_custom_header"
         android:title="@string/status_bar_custom_header_title"
