AE: More dependencies in SlimRecents settings
Change-Id: I606e03e8d144e5204f1583ef5981548dc3f0dd90

--- a/res/xml/recent_panel_settings.xml
+++ b/res/xml/recent_panel_settings.xml
@@ -23,11 +23,13 @@
             android:defaultValue="false" />
 
         <SwitchPreference
+            android:dependency="use_slim_recents"
             android:key="only_show_running_tasks"
             android:title="@string/show_running_tasks_title"
             android:defaultValue="false" />
 
         <SlimSeekBarPreference
+            android:dependency="use_slim_recents"
             android:key="max_apps"
             android:title="@string/recents_max_apps_title" />
 
@@ -60,6 +62,7 @@
             android:persistent="false" />
 
         <SlimSeekBarPreference
+            android:dependency="use_slim_recents"
             android:key="recent_panel_scale"
             android:title="@string/recent_panel_scale_title" />
 
