--- a/res/values/array.xml
+++ b/res/values/array.xml
@@ -514,21 +514,25 @@
     </string-array>
 
     <!-- Lock Clock Fonts -->
-    <string-array name="lock_clock_fonts_entries">
-        <item>@string/lock_clock_font_stock</item>
+    <string-array name="lock_clock_fonts_entries" translatable="false">
+        <item>@string/lock_clock_font_normal</item>
         <item>@string/lock_clock_font_bold</item>
         <item>@string/lock_clock_font_italic</item>
         <item>@string/lock_clock_font_bold_italic</item>
-        <item>@string/lock_clock_font_light</item>
+        <item>@string/lock_clock_font_light_normal</item>
         <item>@string/lock_clock_font_light_italic</item>
-        <item>@string/lock_clock_font_thin</item>
+        <item>@string/lock_clock_font_thin_normal</item>
         <item>@string/lock_clock_font_thin_italic</item>
         <item>@string/lock_clock_font_condensed_normal</item>
-        <item>@string/lock_clock_font_condensed_italic</item>
         <item>@string/lock_clock_font_condensed_bold</item>
+        <item>@string/lock_clock_font_condensed_italic</item>
         <item>@string/lock_clock_font_condensed_bold_italic</item>
         <item>@string/lock_clock_font_medium_normal</item>
         <item>@string/lock_clock_font_medium_italic</item>
+        <item>@string/lock_clock_font_black_normal</item>
+        <item>@string/lock_clock_font_black_italic</item>
+        <item>@string/lock_clock_font_condensed_light_normal</item>
+        <item>@string/lock_clock_font_condensed_light_italic</item>
     </string-array>
 
     <string-array name="lock_clock_fonts_values" translatable="false">
@@ -546,6 +550,10 @@
         <item>11</item>
         <item>12</item>
         <item>13</item>
+        <item>14</item>
+        <item>15</item>
+        <item>16</item>
+        <item>17</item>
     </string-array>
 
     <!-- App sidebar -->
