--- a/res/values/array.xml
+++ b/res/values/array.xml
@@ -187,10 +187,14 @@
         <item>@string/status_bar_weather_font_thin_italic</item>
         <item>@string/status_bar_weather_font_condensed</item>
         <item>@string/status_bar_weather_font_condensed_italic</item>
+        <item>@string/status_bar_weather_font_condensed_light</item>
+        <item>@string/status_bar_weather_font_condensed_light_italic</item>
         <item>@string/status_bar_weather_font_condensed_bold</item>
         <item>@string/status_bar_weather_font_condensed_bold_italic</item>
         <item>@string/status_bar_weather_font_medium</item>
         <item>@string/status_bar_weather_font_medium_italic</item>
+        <item>@string/status_bar_weather_font_black</item>
+        <item>@string/status_bar_weather_font_black_italic</item>
     </string-array>
 
     <string-array name="status_bar_weather_font_style_values" translatable="false">
@@ -208,6 +212,10 @@
         <item>11</item>
         <item>12</item>
         <item>13</item>
+        <item>14</item>
+        <item>15</item>
+        <item>16</item>
+        <item>17</item>
     </string-array>
 
     <!-- Lockscreen Weather -->
