--- a/res/xml/recents_panel_layout.xml
+++ b/res/xml/recents_panel_layout.xml
@@ -50,26 +50,26 @@
         android:summary="@string/recents_show_membar_summary"
         android:defaultValue="false" />
 
-    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
-        android:key="recents_full_screen"
-        android:title="@string/recents_show_fullscreen"
-        android:summaryOn="@string/recents_fullscreen_summary_enabled"
-        android:summaryOff="@string/recents_fullscreen_summary_disabled"
-        android:defaultValue="false" />
+    <ListPreference
+        android:key="immersive_recents"
+        android:title="@string/immersive_recents_title"
+        android:dialogTitle="@string/immersive_recents_dialog_title"
+        android:entries="@array/immersive_recents_entries"
+        android:entryValues="@array/immersive_recents_values"
+        android:summary="@string/power_menu_animation_summary"
+        android:persistent="false" />
 
-    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+    <SwitchPreference
         android:key="recents_full_screen_clock"
         android:title="@string/recents_full_screen_clock_title"
         android:summary="@string/recents_full_screen_clock_summary"
-        android:defaultValue="false"
-        android:dependency="recents_full_screen" />
+        android:defaultValue="false" />
 
-    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+    <SwitchPreference
         android:key="recents_full_screen_date"
         android:title="@string/recents_full_screen_date_title"
         android:summary="@string/recents_full_screen_date_summary"
-        android:defaultValue="false"
-        android:dependency="recents_full_screen" />
+        android:defaultValue="false" />
 
 </PreferenceScreen>
 
