--- a/res/xml/lockscreen_layout.xml
+++ b/res/xml/lockscreen_layout.xml
@@ -28,6 +28,12 @@
         aicpextras:defaultValue="14"
         android:dependency="lockscreen_see_through" />
 
+    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+        android:key="keyguard_toggle_torch"
+        android:title="@string/keyguard_torch_title"
+        android:summary="@string/keyguard_torch_summary"
+        android:defaultValue="false" />
+
     <ListPreference
         android:key="lock_clock_fonts"
         android:title="@string/lock_clock_font_title"
