--- a/res/xml/notifications_layout.xml
+++ b/res/xml/notifications_layout.xml
@@ -39,6 +39,15 @@
         aicpextras:unitsRight=""
         android:persistent="false" />
 
+    <com.lordclockan.aicpextras.widget.SeekBarPreferenceCham
+        android:key="qs_transparent_header"
+        android:title="@string/qs_transparent_header"
+        android:max="255"
+        aicpextras:min="0"
+        aicpextras:unitsLeft=""
+        aicpextras:unitsRight=""
+        android:persistent="false" />
+
     <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
         android:key="disable_immersive_message"
         android:title="@string/disable_immersive_message_title"
