Add new navbar item - Transparency porn!
Change-Id: I7aeedf3f4cb04360b55c303260654932ad3455ee

--- a/res/menu/activity_main_drawer.xml
+++ b/res/menu/activity_main_drawer.xml
@@ -34,6 +34,11 @@
                 android:icon="@drawable/ic_multishit"
                 android:title="@string/multishit_title" />
             <item
+                android:id="@+id/nav_transparency_porn"
+                android:checkable="true"
+                android:icon="@drawable/ic_about"
+                android:title="@string/transparency_porn_title" />
+            <item
                 android:id="@+id/nav_various"
                 android:checkable="true"
                 android:icon="@drawable/ic_various_shit"
