--- a/res/xml/transparency_porn_layout.xml
+++ b/res/xml/transparency_porn_layout.xml
@@ -44,5 +44,14 @@
         aicpextras:unitsRight=""
         android:persistent="false" />
 
+    <com.lordclockan.aicpextras.widget.SeekBarPreferenceCham
+        android:key="transparent_power_menu"
+        android:title="@string/power_menu_transparency"
+        android:max="100"
+        aicpextras:min="0"
+        aicpextras:unitsLeft=""
+        aicpextras:unitsRight="%"
+        android:persistent="false" />
+
 </PreferenceScreen>
 
