--- a/res/menu/activity_main_drawer.xml
+++ b/res/menu/activity_main_drawer.xml
@@ -36,7 +36,7 @@
             <item
                 android:id="@+id/nav_transparency_porn"
                 android:checkable="true"
-                android:icon="@drawable/ic_about"
+                android:icon="@drawable/ic_opacity"
                 android:title="@string/transparency_porn_title" />
             <item
                 android:id="@+id/nav_various"
