AE: Power/reboot dialogs dim amount (2/2)
Change-Id: Ib56c70fa06c926e4a18073b9bf93b4d313c49daf

--- a/res/xml/transparency_porn_layout.xml
+++ b/res/xml/transparency_porn_layout.xml
@@ -53,5 +53,14 @@
         aicpextras:unitsRight="%"
         android:persistent="false" />
 
+    <com.lordclockan.aicpextras.widget.SeekBarPreferenceCham
+        android:key="transparent_power_dialog_dim"
+        android:title="@string/power_menu_dialog_dim"
+        android:max="100"
+        aicpextras:min="0"
+        aicpextras:unitsLeft=""
+        aicpextras:unitsRight="%"
+        android:persistent="false" />
+
 </PreferenceScreen>
 
