--- a/res/xml/traffic.xml
+++ b/res/xml/traffic.xml
@@ -49,6 +49,13 @@
         android:dependency="network_traffic_state"
         android:defaultValue="false" />
 
+    <SwitchPreference
+        android:key="network_traffic_hidearrow"
+        android:title="@string/network_traffic_hidearrow"
+        android:summary="@string/network_traffic_hidearrow_summary"
+        android:dependency="network_traffic_state"
+        android:defaultValue="false" />
+
     <com.lordclockan.aicpextras.widget.SeekBarPreferenceCham
         android:key="network_traffic_autohide_threshold"
         android:title="@string/network_traffic_autohide_threshold"
