Hide Lockscreen clock & date [2/2]
Change-Id: I27cb15828e034f9b1b8c2d24207d1906c880cfb7

--- a/res/xml/lockscreen_layout.xml
+++ b/res/xml/lockscreen_layout.xml
@@ -41,7 +41,23 @@
         android:entries="@array/lock_clock_fonts_entries"
         android:entryValues="@array/lock_clock_fonts_values"
         android:summary="@string/lock_clock_font_summary"
+        android:dependency="hide_lockscreen_clock"
         android:persistent="false" />
+
+    <!-- Hide Lockscreen clock & date -->
+    <PreferenceCategory
+        android:key="hide_lockscreen_items_category"
+        android:title="@string/hide_lockscreen_items_title" />
+
+    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+        android:key="hide_lockscreen_clock"
+        android:title="@string/hide_lockscreen_clock_title"
+        android:defaultValue="true" />
+
+    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+        android:key="hide_lockscreen_date"
+        android:title="@string/hide_lockscreen_date_title"
+        android:defaultValue="true" />
 
     <Preference
         android:key="lockscreen_weather"
