--- a/res/values/array.xml
+++ b/res/values/array.xml
@@ -555,6 +555,13 @@
         <item>@string/lock_clock_font_black_italic</item>
         <item>@string/lock_clock_font_condensed_light_normal</item>
         <item>@string/lock_clock_font_condensed_light_italic</item>
+        <item>@string/lock_clock_font_dancingscript</item>
+        <item>@string/lock_clock_font_dancingscript_bold</item>
+        <item>@string/lock_clock_font_comingsoon</item>
+        <item>@string/lock_clock_font_notoserif</item>
+        <item>@string/lock_clock_font_notoserif_italic</item>
+        <item>@string/lock_clock_font_notoserif_bold</item>
+        <item>@string/lock_clock_font_notoserif_bold_italic</item>
     </string-array>
 
     <string-array name="lock_clock_fonts_values" translatable="false">
