--- a/res/xml/notifications_layout.xml
+++ b/res/xml/notifications_layout.xml
@@ -71,5 +71,11 @@
         android:summary="@string/notif_drawer_weather_summary"
         android:defaultValue="true"/>
 
+    <ListPreference
+        android:key="status_bar_header_font_style"
+        android:entries="@array/status_bar_weather_font_style_entries"
+        android:entryValues="@array/status_bar_weather_font_style_values"
+        android:title="@string/status_bar_header_font_style_title" />
+
 </PreferenceScreen>
 
