Add option to hide lockscreen alarm text [2/2]
Change-Id: Ia0d73b5852020065e160c553af4b573b3ffa6920

--- a/res/xml/lockscreen_layout.xml
+++ b/res/xml/lockscreen_layout.xml
@@ -44,7 +44,7 @@
         android:dependency="hide_lockscreen_clock"
         android:persistent="false" />
 
-    <!-- Hide Lockscreen clock & date -->
+    <!-- Hide Lockscreen clock, date & alarm -->
     <PreferenceCategory
         android:key="hide_lockscreen_items_category"
         android:title="@string/hide_lockscreen_items_title" />
@@ -57,6 +57,11 @@
     <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
         android:key="hide_lockscreen_date"
         android:title="@string/hide_lockscreen_date_title"
+        android:defaultValue="true" />
+
+    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+        android:key="hide_lockscreen_alarm"
+        android:title="@string/hide_lockscreen_alarm_title"
         android:defaultValue="true" />
 
     <Preference
