AE: set number of QS rows (2/2)
Change-Id: Id0226ad0235651fdaf42f258f0db20b72e19fd49
Signed-off-by: Ali B <abittin@gmail.com>

--- a/res/values/array.xml
+++ b/res/values/array.xml
@@ -600,9 +600,20 @@
     </string-array>
 
     <string-array name="qs_num_columns_entries">
-        <item>Three</item>
-        <item>Four</item>
-        <item>Five</item>
+        <item>three</item>
+        <item>four</item>
+        <item>five</item>
+    </string-array>
+
+    <!-- QS Tiles Rows -->
+    <string-array name="qs_num_rows_values" translatable="false">
+        <item>3</item>
+        <item>4</item>
+    </string-array>
+
+    <string-array name="qs_num_rows_entries">
+        <item>three</item>
+        <item>four</item>
     </string-array>
 
 </resources>
