--- a/res/xml/notifications_layout.xml
+++ b/res/xml/notifications_layout.xml
@@ -36,6 +36,13 @@
         android:summary="@string/disable_immersive_message_summary" />
 
     <ListPreference
+        android:key="sysui_qs_num_rows"
+        android:title="@string/qs_num_rows_title"
+        android:entries="@array/qs_num_rows_entries"
+        android:entryValues="@array/qs_num_rows_values"
+        android:persistent="false" />
+
+    <ListPreference
         android:key="sysui_qs_num_columns"
         android:title="@string/qs_num_columns_title"
         android:entries="@array/qs_num_columns_entries"
