--- a/res/values/array.xml
+++ b/res/values/array.xml
@@ -605,4 +605,15 @@
         <item>Five</item>
     </string-array>
 
+    <!-- QS Tiles Rows -->
+    <string-array name="qs_num_rows_values" translatable="false">
+        <item>3</item>
+        <item>4</item>
+    </string-array>
+
+    <string-array name="qs_num_rows_entries">
+        <item>Three</item>
+        <item>Four</item>
+    </string-array>
+
 </resources>
