--- a/res/xml/lockscreen_layout.xml
+++ b/res/xml/lockscreen_layout.xml
@@ -47,26 +47,63 @@
     <!-- Hide Lockscreen clock, date & alarm -->
     <PreferenceCategory
         android:key="hide_lockscreen_items_category"
-        android:title="@string/hide_lockscreen_items_title" />
+        android:title="@string/hide_lockscreen_items_title" >
 
     <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
         android:key="hide_lockscreen_clock"
         android:title="@string/hide_lockscreen_clock_title"
+        android:summary="@string/hide_lockscreen_clock_summary"
         android:defaultValue="true" />
 
     <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
         android:key="hide_lockscreen_date"
         android:title="@string/hide_lockscreen_date_title"
+        android:summary="@string/hide_lockscreen_date_summary"
         android:defaultValue="true" />
 
     <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
         android:key="hide_lockscreen_alarm"
         android:title="@string/hide_lockscreen_alarm_title"
+        android:summary="@string/hide_lockscreen_alarm_summary"
         android:defaultValue="true" />
+
+    </PreferenceCategory>
+
+    <!-- Lockscreen colors -->
+    <PreferenceCategory
+            android:key="lockscreen_colors_category"
+            android:title="@string/lockscreen_colors_title" >
+
+        <net.margaritov.preference.colorpicker.ColorPickerPreference
+            android:key="lockscreen_owner_info_color"
+            android:title="@string/lockscreen_owner_info_color"
+            android:defaultValue="0xffffffff" />
+
+        <net.margaritov.preference.colorpicker.ColorPickerPreference
+            android:key="lockscreen_alarm_color"
+            android:title="@string/lockscreen_alarm_color"
+            android:defaultValue="0xffffffff" />
+
+        <net.margaritov.preference.colorpicker.ColorPickerPreference
+            android:key="lockscreen_clock_color"
+            android:title="@string/lockscreen_clock_color"
+            android:defaultValue="0xffffffff"
+            android:dependency="hide_lockscreen_clock" />
+
+        <net.margaritov.preference.colorpicker.ColorPickerPreference
+            android:key="lockscreen_clock_date_color"
+            android:title="@string/lockscreen_clock_date_color"
+            android:defaultValue="0xffffffff" />
+
+        <Preference
+            android:key="lockscreen_colors_reset"
+            android:title="@string/lockscreen_colors_reset_title" />
+
+    </PreferenceCategory>
 
     <Preference
         android:key="lockscreen_weather"
-        android:title="@string/weahter_lockscreen_category" />
+        android:title="@string/weather_lockscreen_category" />
 
     <PreferenceCategory
             android:key="lockscreen_wallpaper"
