AE: Updated RU Translations by Sergey Samsonenko
Change-Id: I5ea15e08e13d6b6929f50787ee96e22ea4c9d1c6

--- a/res/values-ru/arrays.xml
+++ b/res/values-ru/arrays.xml
@@ -28,4 +28,13 @@
         <item>Средняя</item>
         <item>Большая</item>
     </string-array>
+    <string-array name="qs_num_columns_entries">
+        <item>Три</item>
+        <item>Четыре</item>
+        <item>Пять</item>
+    </string-array>
+    <string-array name="qs_num_rows_entries">
+        <item>Три</item>
+        <item>Четыре</item>
+    </string-array>
 </resources>
