--- a/res/xml/notifications_layout.xml
+++ b/res/xml/notifications_layout.xml
@@ -79,6 +79,18 @@
         android:dependency="status_bar_custom_header"
         android:defaultValue="false"/>
 
+    <com.lordclockan.aicpextras.widget.SeekBarPreferenceCham
+         android:key="status_bar_custom_header_shadow"
+         android:title="@string/status_bar_custom_header_shadow_title"
+         android:summary="@string/status_bar_custom_header_shadow_summary"
+         android:defaultValue="0"
+         android:max="100"
+         aicpextras:min="0"
+         aicpextras:unitsLeft=""
+         aicpextras:unitsRight="@string/unit_percent"
+         android:persistent="false"
+         android:dependency="status_bar_custom_header" />
+
     <com.lordclockan.aicpextras.preferences.CMSystemSettingSwitchPreference
         android:key="status_bar_show_weather"
         android:title="@string/notif_drawer_weather_title"
