--- a/res/xml/headsup_settings.xml
+++ b/res/xml/headsup_settings.xml
@@ -23,5 +23,12 @@
         android:summary="@string/headsup_settings_summary"
         android:defaultValue="true"/>
 
+    <ListPreference
+        android:key="heads_up_time_out"
+        android:title="@string/heads_up_time_out_title"
+        android:entries="@array/heads_up_time_out_entries"
+        android:entryValues="@array/heads_up_time_out_values"
+        android:persistent="false" />
+
     </PreferenceCategory>
 </PreferenceScreen>
