Revert "Revert "AE - App sidebar (2/2)""
This reverts commit 7429405d16cde01d97a1d9d8726b56516fc181e7.

Change-Id: Ia1a477ae2839ca4dc25274a9f6a37d82d52da7fd

--- a/res/xml/multishit_layout.xml
+++ b/res/xml/multishit_layout.xml
@@ -6,6 +6,10 @@
         android:title="@string/app_circle_bar_title" />
 
     <Preference
+        android:key="app_side_bar"
+        android:title="@string/app_sidebar_title" />
+
+    <Preference
         android:key="gestureanywhere"
         android:title="@string/gesture_anywhere_title" />
 
