AE: Add prebuilt AdAway (1/2)
It's open sourced under GPL3

Change-Id: Ia4e8f43874597ff28c1eb387019f1ab13750ff96

--- a/res/xml/various_layout.xml
+++ b/res/xml/various_layout.xml
@@ -52,6 +52,10 @@
         android:summary="@string/systemui_tuner_summary" />
 
     <Preference
+        android:key="adaway_start"
+        android:title="@string/adaway_settings_title" />
+
+    <Preference
         android:key="wakelock_blocker"
         android:title="@string/wakelock_blocker_title" />
 
