[2/3] AE: Add ability to permanently hide apps from recents
AicpExtras part for starting activity

Change-Id: I69e56a21946287e7dce3b930f15f061251f10363

--- a/res/xml/recents_panel_layout.xml
+++ b/res/xml/recents_panel_layout.xml
@@ -38,6 +38,11 @@
         android:defaultValue="true"
         android:dependency="show_clear_all_recents" />
 
+    <Preference
+        android:key="hide_app_from_recents"
+        android:title="@string/hide_apps_from_recents_title"
+        android:summary="@string/hide_apps_from_recents_summary" />
+
     <!-- Search in Recents -->
     <com.lordclockan.aicpextras.preferences.CMSystemSettingSwitchPreference
         android:key="recents_show_search_bar"
@@ -72,4 +77,3 @@
         android:dependency="recents_full_screen" />
 
 </PreferenceScreen>
-
