Updatate DE and ES translations by Ralf Luther
Change-Id: Id546f05375f9e28a5a0fdb92b6860f6c343966be

--- a/res/values-de/array.xml
+++ b/res/values-de/array.xml
@@ -270,10 +270,37 @@
         <item>@string/recent_panel_expanded_mode_never</item>
     </string-array>
 
+    <string-array name="tab_position_entries">
+        <item>Oben</item>
+        <item>Mitte</item>
+        <item>Unten</item>
+    </string-array>
+    <string-array name="tab_position_entryValues">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
+    <string-array name="tab_size_entries">
+        <item>Klein</item>
+        <item>Mittel</item>
+        <item>Groß</item>
+    </string-array>
+    <string-array name="tab_size_entryValues">
+        <item>1.0</item>
+        <item>1.5</item>
+        <item>2.0</item>
+    </string-array>
+
     <string-array name="qs_num_columns_entries">
         <item>3</item>
         <item>4</item>
         <item>5</item>
+    </string-array>
+
+    <string-array name="qs_num_rows_entries">
+        <item>3</item>
+        <item>4</item>
     </string-array>
 
 </resources>
