AE: Keyguard Charging Current Switch [2/2]
Signed-off-by: Varun Date <date.varun123@gmail.com>

Change-Id: I97938de64ad83e4861fdad5a84e98a61a3fca955

--- a/res/xml/lockscreen_layout.xml
+++ b/res/xml/lockscreen_layout.xml
@@ -67,6 +67,12 @@
         android:summary="@string/hide_lockscreen_alarm_summary"
         android:defaultValue="true" />
 
+    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+        android:key="lock_screen_show_current"
+        android:title="@string/lock_screen_show_current"
+        android:summary="@string/lock_screen_show_current_summary"
+        android:defaultValue="false" />
+
     </PreferenceCategory>
 
     <!-- Lockscreen colors -->
