Floating Windows settings
AICPfy

Change-Id: Ibfc7d2c29001597942753a465600cc03a1486abf
Signed-off-by: Corey Edwards <ensabahnur16@gmail.com>

--- a/res/xml/multishit_layout.xml
+++ b/res/xml/multishit_layout.xml
@@ -2,6 +2,10 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <Preference
+        android:key="floating_windows"
+        android:title="@string/floating_windows" />
+
+    <Preference
         android:key="app_circle_bar"
         android:title="@string/app_circle_bar_title" />
 
