Battery bar enhancements [2/2]
Add color settings for charging & low battery
Add reversed alignment setting

Alignment array translations had to be modified because of the newly added
entry; I made the array reference string resources so the array doesn't have
to get translated in whole

AICPfy:
Also remove animatie warning

Change-Id: I51f7e0499971ed344d8faa6e63d4f89558946cb7

--- a/res/xml/battery_bar.xml
+++ b/res/xml/battery_bar.xml
@@ -35,6 +35,16 @@
         android:title="@string/battery_bar_color"
         android:defaultValue="0xffffffff" />
 
+    <net.margaritov.preference.colorpicker.ColorPickerPreference
+        android:key="battery_bar_charging_color"
+        android:title="@string/battery_bar_charging_color"
+        android:defaultValue="0xffffffff" />
+
+    <net.margaritov.preference.colorpicker.ColorPickerPreference
+        android:key="battery_bar_battery_low_color"
+        android:title="@string/battery_bar_battery_low_color"
+        android:defaultValue="0xffffffff" />
+
     <ListPreference
         android:key="battery_bar_style"
         android:title="@string/battery_bar_style_title"
@@ -49,7 +59,6 @@
 
     <SwitchPreference
         android:key="battery_bar_animate"
-        android:title="@string/battery_bar_animate_title"
-        android:summary="@string/battery_bar_animate_summary" />
+        android:title="@string/battery_bar_animate_title" />
 
-</PreferenceScreen> 
+</PreferenceScreen>
