--- a/res/values/array.xml
+++ b/res/values/array.xml
@@ -101,14 +101,16 @@
         <item>1</item>
     </string-array>
 
-    <string-array name="battery_bar_style_entries">
-        <item>Regular</item>
-        <item>Center-mirrored</item>
+    <string-array name="battery_bar_style_entries" translatable="false">
+        <item>@string/battery_bar_style_regular</item>
+        <item>@string/battery_bar_style_center_mirrored</item>
+        <item>@string/battery_bar_style_reversed</item>
     </string-array>
 
     <string-array name="battery_bar_style_values" translatable="false">
         <item>0</item>
         <item>1</item>
+        <item>2</item>
     </string-array>
 
     <string-array name="battery_bar_thickness_entries" translatable="false">
@@ -284,7 +286,7 @@
          <item>@string/pa_pie_size_monster</item>
          <item>@string/pa_pie_size_enormous</item>
      </string-array>
- 
+
      <string-array name="values_pa_pie_size" translatable="false">
          <item>0.9</item>
          <item>1.0</item>
@@ -293,33 +295,33 @@
          <item>1.3</item>
          <item>1.4</item>
      </string-array>
- 
+
      <string-array name="entries_pa_pie_gravity">
          <item>@string/pa_pie_gravity_left</item>
          <item>@string/pa_pie_gravity_right</item>
          <item>@string/pa_pie_gravity_bottom</item>
      </string-array>
- 
+
      <string-array name="values_pa_pie_gravity" translatable="false">
          <item>0</item>
          <item>1</item>
          <item>2</item>
      </string-array>
- 
+
      <string-array name="entries_pa_pie_mode">
          <item>@string/pa_pie_mode_bare</item>
          <item>@string/pa_pie_mode_quick</item>
          <item>@string/pa_pie_mode_default</item>
          <item>@string/pa_pie_mode_slow</item>
      </string-array>
- 
+
      <string-array name="values_pa_pie_mode" translatable="false">
          <item>-1</item>
          <item>0</item>
          <item>1</item>
          <item>2</item>
      </string-array>
- 
+
      <string-array name="entries_pa_pie_angle">
          <item>@string/pa_pie_angle_none</item>
          <item>@string/pa_pie_angle_small</item>
@@ -327,7 +329,7 @@
          <item>@string/pa_pie_angle_huge</item>
          <item>@string/pa_pie_angle_super</item>
      </string-array>
- 
+
      <string-array name="values_pa_pie_angle" translatable="false">
          <item>0</item>
          <item>6</item>
@@ -335,14 +337,14 @@
          <item>18</item>
          <item>24</item>
      </string-array>
- 
+
      <string-array name="entries_pa_pie_gap">
          <item>@string/pa_pie_gap_none</item>
          <item>@string/pa_pie_gap_small</item>
          <item>@string/pa_pie_gap_big</item>
          <item>@string/pa_pie_gap_huge</item>
      </string-array>
- 
+
      <string-array name="values_pa_pie_gap" translatable="false">
          <item>0</item>
          <item>1</item>
