--- a/res/xml/notifications_layout.xml
+++ b/res/xml/notifications_layout.xml
@@ -42,6 +42,20 @@
         android:entryValues="@array/qs_num_rows_values"
         android:persistent="false" />
 
+     <ListPreference
+         android:key="qs_tile_animation_style"
+         android:title="@string/qs_tile_animation_style_title"
+         android:entries="@array/qs_tile_animation_style_entries"
+         android:entryValues="@array/qs_tile_animation_style_values"
+         android:persistent="false" />
+ 
+     <ListPreference
+         android:key="qs_tile_animation_duration"
+         android:title="@string/qs_tile_animation_duration_title"
+         android:entries="@array/qs_tile_animation_duration_entries"
+         android:entryValues="@array/qs_tile_animation_duration_values"
+         android:persistent="false" />
+
     <ListPreference
         android:key="sysui_qs_num_columns"
         android:title="@string/qs_num_columns_title"
