[2/2] AE: allow disabling quick settings on secure lock screens
Change-Id: I17c2a5e5f7416b7b83076ee5a29e3bd4bf79e1d1

--- a/res/xml/lockscreen_layout.xml
+++ b/res/xml/lockscreen_layout.xml
@@ -12,6 +12,12 @@
         android:summary="@string/powermenu_lockscreen_summary"
         android:defaultValue="true" />
 
+    <com.lordclockan.aicpextras.preferences.SecureSettingSwitchPreference
+        android:key="lockscreen_qs_disabled"
+        android:title="@string/lockscreen_qs_disabled_title"
+        android:summary="@string/lockscreen_qs_disabled_summary"
+        android:defaultValue="false" />
+
     <PreferenceCategory
         android:title="@string/Misc"
         android:key="lockscreen_misc_category">
