--- a/res/xml/transparency_porn_layout.xml
+++ b/res/xml/transparency_porn_layout.xml
@@ -84,4 +84,13 @@
         aicpextras:unitsRight="px"
         android:persistent="false" />
 
+    <com.lordclockan.aicpextras.widget.SeekBarPreferenceCham
+        android:key="volume_dialog_corner_radius"
+        android:title="@string/volume_dialog_corner_radius_title"
+        android:max="50"
+        aicpextras:min="0"
+        aicpextras:unitsLeft=""
+        aicpextras:unitsRight="px"
+        android:persistent="false" />
+
 </PreferenceScreen>
