--- a/res/values/array.xml
+++ b/res/values/array.xml
@@ -714,4 +714,17 @@
         <item>2</item>
     </string-array>
 
+    <!-- Volume dialog stroke -->
+    <string-array name="qs_stroke_entries" translatable="false">
+        <item>@string/qs_stroke_disabled</item>
+        <item>@string/qs_stroke_accent</item>
+        <item>@string/qs_stroke_custom</item>
+    </string-array>
+
+    <string-array name="qs_stroke_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
 </resources>
