AE: VolumeDialog stroke dash (2/2)
Change-Id: I923104fe5b869df34d18697c883ab23dc42b0e5b

--- a/res/xml/transparency_porn_layout.xml
+++ b/res/xml/transparency_porn_layout.xml
@@ -123,4 +123,22 @@
         aicpextras:unitsRight="px"
         android:persistent="false" />
 
+    <com.lordclockan.aicpextras.widget.SeekBarPreferenceCham
+        android:key="volume_dialog_dash_width"
+        android:title="@string/volume_dialog_dash_width_title"
+        android:max="50"
+        aicpextras:min="0"
+        aicpextras:unitsLeft=""
+        aicpextras:unitsRight="px"
+        android:persistent="false" />
+
+    <com.lordclockan.aicpextras.widget.SeekBarPreferenceCham
+        android:key="volume_dialog_dash_gap"
+        android:title="@string/volume_dialog_dash_gap_title"
+        android:max="50"
+        aicpextras:min="1"
+        aicpextras:unitsLeft=""
+        aicpextras:unitsRight="px"
+        android:persistent="false" />
+
 </PreferenceScreen>
