--- a/res/xml/notifications_layout.xml
+++ b/res/xml/notifications_layout.xml
@@ -129,4 +129,31 @@
         android:entryValues="@array/status_bar_weather_font_style_values"
         android:title="@string/status_bar_header_font_style_title" />
 
+    <PreferenceCategory
+        android:key="qs_panel_logo_category"
+        android:title="@string/qs_panel_logo_category">
+
+        <ListPreference
+            android:key="qs_panel_logo"
+            android:title="@string/qs_panel_logo_title"
+            android:dialogTitle="@string/qs_panel_logo_title"
+            android:entries="@array/qs_panel_logo_entries"
+            android:entryValues="@array/qs_panel_logo_values"
+            android:defaultValue="0" />
+
+        <com.lordclockan.aicpextras.widget.SeekBarPreferenceCham
+            android:key="qs_panel_logo_alpha"
+            android:title="@string/qs_panel_logo_alpha_title"
+            android:max="255"
+            aicpextras:min="0"
+            aicpextras:unitsLeft=""
+            aicpextras:unitsRight="%"
+            android:persistent="false" />
+
+        <net.margaritov.preference.colorpicker.ColorPickerPreference
+            android:key="qs_panel_logo_color"
+            android:title="@string/qs_panel_logo_color_title" />
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
