--- a/res/layout/about_logo.xml
+++ b/res/layout/about_logo.xml
@@ -31,7 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/aicp_logo_letters"
-        android:tint="@color/colorPrimary"
+        android:tint="@color/colorAccent"
         android:layout_gravity="center_horizontal"
         />
 </FrameLayout>
