AE: Lockscreen clock and date font size (2/2)
Change-Id: I5466d2c393d51d5230d7eaf4d3cfc3fbfd2e7afe
Signed-off-by: LorDClockaN <lordclockan@gmail.com>

--- a/res/xml/lockscreen_layout.xml
+++ b/res/xml/lockscreen_layout.xml
@@ -44,6 +44,28 @@
         android:dependency="hide_lockscreen_clock"
         android:persistent="false" />
 
+    <com.lordclockan.aicpextras.widget.SeekBarPreferenceCham
+        android:key="lockscreen_clock_font_size"
+        android:title="@string/lockscreen_clock_font_size_title"
+        android:max="150"
+        aicpextras:min="1"
+        aicpextras:unitsLeft=""
+        aicpextras:unitsRight="sp"
+        aicpextras:defaultVal="88"
+        android:persistent="false"
+        android:dependency="hide_lockscreen_clock" />
+
+    <com.lordclockan.aicpextras.widget.SeekBarPreferenceCham
+        android:key="lockscreen_date_font_size"
+        android:title="@string/lockscreen_date_font_size_title"
+        android:max="25"
+        aicpextras:min="1"
+        aicpextras:unitsLeft=""
+        aicpextras:unitsRight="sp"
+        aicpextras:defaultVal="14"
+        android:persistent="false"
+        android:dependency="hide_lockscreen_date" />
+
     <!-- Hide Lockscreen clock, date & alarm -->
     <PreferenceCategory
         android:key="hide_lockscreen_items_category"
