--- a/res/xml/notifications_layout.xml
+++ b/res/xml/notifications_layout.xml
@@ -93,6 +93,21 @@
         android:title="@string/enable_task_manager_title"
         android:summary="@string/enable_task_manager_summary" />
 
+    <com.lordclockan.aicpextras.widget.SeekBarPreferenceCham
+        android:key="status_bar_custom_header_text_shadow"
+        android:title="@string/status_bar_custom_header_text_shadow_title"
+        android:summary="@string/status_bar_custom_header_text_shadow_summary"
+        android:defaultValue="0"
+        android:max="25"
+        aicpextras:min="0"
+        aicpextras:unitsLeft=""
+        aicpextras:unitsRight="@string/unit_percent"
+        android:persistent="false" />
+
+        <net.margaritov.preference.colorpicker.ColorPickerPreference
+            android:key="status_bar_custom_header_text_shadow_color"
+            android:title="@string/status_bar_custom_header_text_shadow_color_title" />
+
     <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
         android:key="status_bar_custom_header"
         android:title="@string/status_bar_custom_header_title"
