Screenshot Crop & Share [2/2]
Change-Id: If5c76bbd7d9200e8dad1086b66ea55f1a5cfc42f

--- a/res/xml/various_layout.xml
+++ b/res/xml/various_layout.xml
@@ -21,6 +21,19 @@
         android:title="@string/screenshot_sound_title"
         android:summary="@string/screenshot_sound_summary"
         android:defaultValue="true" />
+        
+
+     <com.dirtyunicorns.dutweaks.preference.SystemSettingSwitchPreference
+            android:key="screenshot_crop_and_share"
+            android:title="@string/screenshot_crop_and_share_title"
+            android:summary="@string/screenshot_crop_and_share_summary"
+            android:defaultValue="false" />
+
+     <com.dirtyunicorns.dutweaks.preference.SystemSettingSwitchPreference
+            android:key="screenshot_crop_behavior"
+            android:title="@string/screenshot_crop_behavior_title"
+            android:summary="@string/screenshot_crop_behavior_summary"
+            android:defaultValue="false" />
 
     <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
         android:key="three_finger_gesture"
