Screenshot Crop & Share [2/2]
Change-Id: If5c76bbd7d9200e8dad1086b66ea55f1a5cfc42f

--- a/res/xml/various_layout.xml
+++ b/res/xml/various_layout.xml
@@ -23,6 +23,18 @@
         android:defaultValue="true" />
 
     <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+        android:key="screenshot_crop_and_share"
+        android:title="@string/screenshot_crop_and_share_title"
+        android:summary="@string/screenshot_crop_and_share_summary"
+        android:defaultValue="false" />
+
+    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+        android:key="screenshot_crop_behavior"
+        android:title="@string/screenshot_crop_behavior_title"
+        android:summary="@string/screenshot_crop_behavior_summary"
+        android:defaultValue="false" />
+
+    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
         android:key="three_finger_gesture"
         android:title="@string/three_finger_gesture"
         android:summary="@string/three_finger_gesture_summary"
