Configurable Keyguard alpha and Keyguard Bouncer alpha [2/2]
Change-Id: Ia4f42cfb2101370bceab20ede55c8e3d05a9335f

--- a/res/xml/lockscreen_layout.xml
+++ b/res/xml/lockscreen_layout.xml
@@ -28,6 +28,26 @@
         aicpextras:defaultValue="14"
         android:dependency="lockscreen_see_through" />
 
+    <com.lordclockan.aicpextras.widget.SeekBarPreferenceCham
+         android:key="lockscreen_alpha"
+         android:title="@string/lockscreen_alpha"
+         aicpextras:max="100"
+         aicpextras:minimum="0"
+         aicpextras:interval="1"
+         aicpextras:unitsLeft=""
+         aicpextras:unitsRight="%"
+         android:persistent="false" />
+
+    <com.lordclockan.aicpextras.widget.SeekBarPreferenceCham
+         android:key="lockscreen_security_alpha"
+         android:title="@string/lockscreen_security_alpha"
+         aicpextras:max="100"
+         aicpextras:minimum="0"
+         aicpextras:interval="1"
+         aicpextras:unitsLeft=""
+         aicpextras:unitsRight="%"
+         android:persistent="false" />
+
     <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
         android:key="keyguard_toggle_torch"
         android:title="@string/keyguard_torch_title"
